--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-514.streetracing.org<br/>
-<img src="Photo1.jpg"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	514.streetracing.org<br/>
+	<img src="Photo1.jpg"/>
+</body>
+</html>
