--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+
+
+
 </head>
 <body>
-	514.streetracing.org<br/>
-	<img src="Photo1.jpg"/>
+	514.streetracing.org<br/><br/>
+	<img style="height:80vh;width:80vw;object-fit:contain;" src="Photo1.jpg"/>
 </body>
 </html>
