--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-
-
-
+<style>
+	div {
+		width:80vw;
+		height:80vh;
+	 }
+	 img {
+		max-width:100%;
+		height:auto;
+		max-height:100%;
+	 }
+</style>
 </head>
 <body>
-	514.streetracing.org<br/><br/>
-	<img style="height:80vh;width:80vw;object-fit:contain;" src="Photo1.jpg"/>
+	<div>
+	<h3>514.streetracing.org</h3>
+	<img src="Photo1.jpg"/>
+</div>
+
 </body>
 </html>
