--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<title></title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 <!--
 <meta referece="https://codesalad.dev/blog/pop-up-image-lightbox-in-pure-css-25#_"/>
